--- a/functions/public/index.html
+++ b/functions/public/index.html
@@ -9,6 +9,7 @@
       name="Functions/Components"
       content="React functions and components"
     />
+    <link href="https://fonts.cdnfonts.com/css/uber-move-2" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
