weatherAPI: grabs data from weather service and displays to screen

--- a/weatherAPI/index.html
+++ b/weatherAPI/index.html
@@ -15,7 +15,7 @@
 
    <h5>The Weather Today.</h5>
 
-   <div id="weather">...</div>
+   <div id="weather"></div>
 
    <script src="libs/bootstrap.bundle.js"></script>
    <script src="js/scripts.js"></script>
